added skybox drawing new controls   M + MouseWheel - select mesh   B + MouseWheel - select skybox

--- a/cfg/Engine.cfg
+++ b/cfg/Engine.cfg
@@ -4,5 +4,5 @@
 ;iDefaultResHeight=720
 iDefaultResWidth=1600
 iDefaultResHeight=900
-;iDefaultResWidth=1920
-;iDefaultResHeight=1080
+iDefaultResWidth=1920
+iDefaultResHeight=1080
