Windowed/Fullscreen modes can now be controlled in cfg/

--- a/cfg/Engine.cfg
+++ b/cfg/Engine.cfg
@@ -6,3 +6,10 @@ iDefaultResWidth=1600
 iDefaultResHeight=900
 iDefaultResWidth=1920
 iDefaultResHeight=1080
+
+;windowed
+iWindowMode=0
+;windowed - noborder
+;iWindowMode=1
+;fullscreen
+;iWindowMode=2
