--- a/projects/debian/CMakeLists.txt
+++ b/projects/debian/CMakeLists.txt
@@ -92,10 +92,12 @@ set(INDICUS_ENGINE_SOURCE_FILES
     #${MY_PROJ_ROOT}/src/engine/actor/Light.cpp
     #${MY_PROJ_ROOT}/src/engine/actor/LightAmbient.cpp
     ${MY_PROJ_ROOT}/src/engine/actor/LightCone.cpp
+    ${MY_PROJ_ROOT}/src/engine/actor/LightPoint.cpp
     ${MY_PROJ_ROOT}/src/engine/component/AxisDisplayComponent.cpp
     ${MY_PROJ_ROOT}/src/engine/component/BillboardComponent.cpp
     ${MY_PROJ_ROOT}/src/engine/component/Component.cpp
     ${MY_PROJ_ROOT}/src/engine/component/LightConeComponent.cpp
+    ${MY_PROJ_ROOT}/src/engine/component/LightPointComponent.cpp
     ${MY_PROJ_ROOT}/src/engine/component/MeshComponent.cpp
     ${MY_PROJ_ROOT}/src/engine/component/PositionComponent.cpp
     ${MY_PROJ_ROOT}/src/engine/component/RealComponent.cpp
@@ -150,10 +152,12 @@ set(INDICUS_ENGINE_HEADER_FILES
     #${MY_PROJ_ROOT}/include/engine/actor/Light.h
     #${MY_PROJ_ROOT}/include/engine/actor/LightAmbient.h
     ${MY_PROJ_ROOT}/include/engine/actor/LightCone.h
+    ${MY_PROJ_ROOT}/include/engine/actor/LightPoint.h
     ${MY_PROJ_ROOT}/include/engine/component/AxisDisplayComponent.h
     ${MY_PROJ_ROOT}/include/engine/component/BillboardComponent.h
     ${MY_PROJ_ROOT}/include/engine/component/Component.h
     ${MY_PROJ_ROOT}/include/engine/component/LightConeComponent.h
+    ${MY_PROJ_ROOT}/include/engine/component/LightPointComponent.h
     ${MY_PROJ_ROOT}/include/engine/component/MeshComponent.h
     ${MY_PROJ_ROOT}/include/engine/component/PositionComponent.h
     ${MY_PROJ_ROOT}/include/engine/component/RealComponent.h
