scene elements are now a lot better configurable through 'cfg/OpenGL_test.cfg'

--- a/cfg/OpenGL_test.cfg
+++ b/cfg/OpenGL_test.cfg
@@ -1,5 +1,19 @@
+bMoveableActor=false
+;bMoveableActor=true
+
+bMoveableSpotlight=false
+bMoveableSpotlight=true
+
+;note: enables 'bMoveableActor'
 bCacoCloseup=false
 ;bCacoCloseup=true
 
 bShadowMapTesting=false
-;bShadowMapTesting=true
+bShadowMapTesting=true
+
+bNormalVectorTesting=false
+bNormalVectorTesting=true
+
+bCirclingLights=false
+bCirclingLights=true
+
