enabled all scene elements in cfg/

--- a/cfg/OpenGL_test.cfg
+++ b/cfg/OpenGL_test.cfg
@@ -1,12 +1,12 @@
 bMoveableActor=false
-;bMoveableActor=true
+bMoveableActor=true
 
 bMoveableSpotlight=false
 bMoveableSpotlight=true
 
 ;note: enables 'bMoveableActor'
 bCacoCloseup=false
-;bCacoCloseup=true
+bCacoCloseup=true
 
 bShadowMapTesting=false
 bShadowMapTesting=true
