added Plasma Gun viewmodel to hand

--- a/cfg/OpenGL_test.cfg
+++ b/cfg/OpenGL_test.cfg
@@ -2,18 +2,20 @@ bMoveableActor=false
 bMoveableActor=true
 
 bMoveableSpotlight=false
-bMoveableSpotlight=true
+;bMoveableSpotlight=true
 
 ;note: enables 'bMoveableActor'
 bCacoCloseup=false
-bCacoCloseup=true
+;bCacoCloseup=true
 
 bShadowMapTesting=false
 bShadowMapTesting=true
 
 bNormalVectorTesting=false
-bNormalVectorTesting=true
+;bNormalVectorTesting=true
 
 bCirclingLights=false
-bCirclingLights=true
+;bCirclingLights=true
 
+bPlasmaGunInHand=false
+bPlasmaGunInHand=true
