moved 'SDLWrapper' into 'engine/experimental/' actually deleleted 'SDLBillboardComponent'

--- a/projects/debian/CMakeLists.txt
+++ b/projects/debian/CMakeLists.txt
@@ -104,6 +104,7 @@ set(INDICUS_ENGINE_SOURCE_FILES
     ${MY_PROJ_ROOT}/src/engine/component/PositionComponent.cpp
     ${MY_PROJ_ROOT}/src/engine/component/RealComponent.cpp
     ${MY_PROJ_ROOT}/src/engine/component/WorldComponent.cpp
+    ${MY_PROJ_ROOT}/src/engine/experimental/SDLWrapper.cpp
     ${MY_PROJ_ROOT}/src/engine/experimental/SphereComponent.cpp
     ${MY_PROJ_ROOT}/src/engine/experimental/World.cpp
     ${MY_PROJ_ROOT}/src/engine/service/AssetManager.cpp
@@ -118,9 +119,6 @@ set(INDICUS_ENGINE_SOURCE_FILES
     ${MY_PROJ_ROOT}/src/engine/Services.cpp
     ${MY_PROJ_ROOT}/src/engine/StandardShaderProgram.cpp
     ${MY_PROJ_ROOT}/src/engine/Utility.cpp
-    ${MY_PROJ_ROOT}/src/SDLWrapper.cpp
-    #${MY_PROJ_ROOT}/src/ShaderProgram_old.cpp
-
     #${MY_PROJ_ROOT}/src/test/assimp_test/Game.cpp
     )
 
@@ -164,6 +162,7 @@ set(INDICUS_ENGINE_HEADER_FILES
     ${MY_PROJ_ROOT}/include/engine/component/RealComponent.h
     ${MY_PROJ_ROOT}/include/engine/component/WorldComponent.h
     ${MY_PROJ_ROOT}/include/engine/experimental/Networking.h
+    ${MY_PROJ_ROOT}/include/engine/experimental/SDLWrapper.h
     ${MY_PROJ_ROOT}/include/engine/experimental/SphereComponent.h
     ${MY_PROJ_ROOT}/include/engine/experimental/World.h
     ${MY_PROJ_ROOT}/include/engine/interface/ILight.h
@@ -188,8 +187,6 @@ set(INDICUS_ENGINE_HEADER_FILES
     ${MY_PROJ_ROOT}/include/engine/StandardShaderProgram.h
     ${MY_PROJ_ROOT}/include/engine/Utility.h
     #${MY_PROJ_ROOT}/include/test/assimp_test/Game.h
-    ${MY_PROJ_ROOT}/include/SDLWrapper.h
-    #${MY_PROJ_ROOT}/include/ShaderProgram_old.h
     )
 
 #all engine include directories go in this variable
