improved behavior of displaying URL and hint for media access, when media is missing

--- a/cfg/OpenGL_test.cfg
+++ b/cfg/OpenGL_test.cfg
@@ -1,4 +1,5 @@
 strMediaURL=https://drive.proton.me/urls/9RX2JB1QEC#JV42i3OhMR8z
+strMediaHint=asddsaasd
 
 bMoveableActor=false
 bMoveableActor=true
