improved README.md updated media link to point to an unencoded source for the files

--- a/cfg/OpenGL_test.cfg
+++ b/cfg/OpenGL_test.cfg
@@ -1,5 +1,4 @@
-strMediaURL=https://drive.proton.me/urls/9RX2JB1QEC#JV42i3OhMR8z
-strMediaHint=asddsaasd
+strMediaURL=https://drive.proton.me/urls/ZVFAK2V5FR#jjY9o83RMyUL
 
 bMoveableActor=false
 bMoveableActor=true
