added a small comment in config

--- a/cfg/OpenGL_test.cfg
+++ b/cfg/OpenGL_test.cfg
@@ -22,5 +22,6 @@ bCirclingLights=false
 bPlasmaGunInHand=false
 bPlasmaGunInHand=true
 
+;this slows down startup, but avoids freezes caused by just-in-time loading
 bPreloadAllAssets=false
 ;bPreloadAllAssets=true
