updated the media link to 'v0.5.2_release'

--- a/cfg/OpenGL_test.cfg
+++ b/cfg/OpenGL_test.cfg
@@ -1,4 +1,4 @@
-strMediaURL=https://drive.proton.me/urls/ZVFAK2V5FR#jjY9o83RMyUL
+strMediaURL=https://drive.proton.me/urls/JRRD1QYG1M#MLzdrZ3h4qNn
 
 bMoveableActor=false
 bMoveableActor=true
