moved project generator to 'script/' regenerated projects with the generator

--- a/projects/win64/CMakeLists.txt
+++ b/projects/win64/CMakeLists.txt
@@ -52,8 +52,11 @@ set(CMAKE_CACHEFILE_DIR ${MY_BUILD_DIR})
 #  ENGINE_GL_DEBUG_BUFFER_SKIP_DYNAMIC:  disable per-frame logging of 'DYNAMIC_*' hinted buffers
 #  ENGINE_GL_DEBUG_BUFFER_SKIP_STREAM:   disable per-frame logging of 'STREAM_*' hinted buffers
 #  ENGINE_GL_UNBIND_ENABLED: Enables the macro-functions 'PT_GL_UnbindBuffer' and 'PT_GL_UnbindTexture'
+
+# add platform-specific compile flags
+set(MY_COMPILE_FLAGS "${MY_COMPILE_FLAGS}  " )
+
 set(MY_COMPILE_FLAGS "-Wall -Wextra -Wno-unused-parameter" )
-#set(MY_COMPILE_FLAGS "${MY_COMPILE_FLAGS}  -Wl,--no-as-needed -lpthread -ldl" )
 set(MY_COMPILE_FLAGS "${MY_COMPILE_FLAGS} -g -O0 -fno-inline" )
 #set(MY_COMPILE_FLAGS "${MY_COMPILE_FLAGS} -DPT_DEBUG_NOAUTO")
 #set(MY_COMPILE_FLAGS "${MY_COMPILE_FLAGS} -DENGINE_DEBUG_ENABLED -DENGINE_GL_DEBUG_ALL")
@@ -120,8 +123,8 @@ set(INDICUS_ENGINE_SOURCE_FILES
     ${MY_PROJ_ROOT}/src/engine/Services.cpp
     ${MY_PROJ_ROOT}/src/engine/StandardShaderProgram.cpp
     ${MY_PROJ_ROOT}/src/engine/Utility.cpp
-
     #${MY_PROJ_ROOT}/src/test/assimp_test/Game.cpp
+
 )
 
 #all generic engine header files go in this variable
@@ -189,6 +192,7 @@ set(INDICUS_ENGINE_HEADER_FILES
     ${MY_PROJ_ROOT}/include/engine/StandardShaderProgram.h
     ${MY_PROJ_ROOT}/include/engine/Utility.h
     #${MY_PROJ_ROOT}/include/test/assimp_test/Game.h
+
 )
 
 #all engine include directories go in this variable
@@ -200,6 +204,7 @@ set(INDICUS_ENGINE_INCLUDE_DIRECTORIES
     ${MY_PROJ_ROOT}/lib/SDL2/include
     ${MY_PROJ_ROOT}/lib/math3d/include
     ${MY_PROJ_ROOT}/lib/ptlib/include
+
 )
 
 #all libraries shared by indicus lib and executables that link to indicus lib go in this variable
@@ -221,9 +226,9 @@ set(INDICUS_SHARED_LINK_SETTINGS
     -lpng
     -lassimp-5
     -lDbghelp
+    #-lptlib
+    #-lmath3d
 
-#    -lptlib
-#    -lmath3d
 )
 
 #all libraries statically linked to indicus lib go in this variable
@@ -334,6 +339,7 @@ add_executable(OpenGL_test
     ${MY_PROJ_ROOT}/src/test/opengl_test/RotationTestActor.cpp
     ${MY_PROJ_ROOT}/src/test/opengl_test/WorldGeometry.cpp
     ${MY_PROJ_ROOT}/src/test/opengl_test/WorldAxisActor.cpp
+
 )
 
 target_include_directories(OpenGL_test PRIVATE
