--- a/cfg/OpenGL_test.cfg
+++ b/cfg/OpenGL_test.cfg
@@ -25,3 +25,7 @@ bPlasmaGunInHand=true
 ;this slows down startup, but avoids freezes caused by just-in-time loading
 bPreloadAllAssets=false
 ;bPreloadAllAssets=true
+
+
+bFreeLookEnabledAtStart=false
+;bFreeLookEnabledAtStart=true
